fixed layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
-    gap: 200px;
+    justify-content: space-between;
     transition: 0.3s ease;
     background-color: var(--bg-colour);
 }
@@ -38,16 +37,25 @@ body {
     'GRAD' 0,
     'opsz' 48;
     height: 90px;
-    position: absolute;
     color: var(--text-colour);
-    top: 1%;
-    right: 1%;
+    margin-right: 20px;
     transition: 0.5s;
     font-size: 36px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+}
+
+.ghostContainer1 {
+    width: 36px;
+    height: 90px;
+    margin-left: 20px;
+}
+
+.headerText {
+    font-size: 48px;
+    font-family:'Roboto', sans-serif;   
 }
 
 .toggle.material-symbols-outlined:hover {
@@ -64,11 +72,7 @@ body {
     width: 100%;
     height: 90px;
     align-items: center;
-    font-size: 48px;
-    font-family:'Roboto', sans-serif;
-    position: absolute;
-    top: 0%;
-    justify-content: center;
+    justify-content: space-between;
     display: flex;
     font-weight: 500;
     background-color: var(--header-footer-colour);
@@ -78,10 +82,8 @@ body {
 
 
 .footer {
-    position: absolute;
     width: 100%;
     height: 40px;
-    bottom: 0%;
     text-align: center;
     display: flex;
     align-items: center;
@@ -104,7 +106,6 @@ body {
 }
 
 .container {
-    position: absolute;
     display: flex;
     flex-wrap: wrap;
     z-index: 0;
@@ -202,11 +203,4 @@ body {
 
 .text {
     font-family:'Roboto', sans-serif;
-}
-
-.ghostContainer1 {
-    position: absolute;
-    width: 100%;
-    height: 10px;
-    bottom: 5%;
 }
